--- a/templates/newsapp/search.html
+++ b/templates/newsapp/search.html
@@ -1,21 +1,19 @@
 {% extends 'newsapp/Frontpage.html' %}
 {% block carousel %}<div></div>{% endblock %}
 {% block content %}
-<div class = "row ">
-    {% for result_list in results%}
-        <div class = "col-md-4 d-flex align-items-stretch">
-            <div class = "card">
-            <div class = "card-img-top">
+<div class = "card-columns">
+        {% for result_list in results%}
+            <div class = "card " >
+            <div class = "card-img-top" style="display:inline-block;">
                 <img src="{{ result_list.img }}" class = "img-fluid w-100" alt="">
                 {{ value|linebreaks }}
-                {{ result_list.title }}
+                <h4>{{ result_list.title }}</h4>
             </div>
-            <div class = "card-body" style="background: burlywood">
-                {{ result_list.desc }}
+
+                <p class = "card-text" style="display:inline-block;font-size: small;">{{ result_list.desc }}</p>
                 {{ value|linebreaks }}
             </div>
-            </div>
+
+        {% endfor %}
         </div>
-    {% endfor %}
-</div>
 {% endblock %}
