--- a/templates/newsapp/Entertainment.html
+++ b/templates/newsapp/Entertainment.html
@@ -2,4 +2,4 @@
 
 {% block India %}<li class = "nav-item text-center"><a href = "{% url 'send_news' %}" class = "nav-link">India</a></li>{% endblock %}
 {% block entertainment %}<li class = "nav-item text-center active"><a href = "{% url 'send_entertainment_news' %}" class = "nav-link active">Entertainment</a></li>{% endblock %}
-{% block carousel %}<div></div>{% endblock %}
+{% block carousel %}<div class="mt-4"></div> {% endblock %}
