--- a/static/newsapp/Frontpagecss.css
+++ b/static/newsapp/Frontpagecss.css
@@ -1,3 +1,5 @@
+
+
 a:hover{
     text-decoration:none;
 }
@@ -23,56 +25,47 @@ a:hover{
     height: 100%;
 }
 
-.title{
-    position: relative;
-    bottom: 12%;
-    color: blue;
-    text-align: center;
-}
 
-@media (min-width: 991px) {
+
+@media (min-width: 992px) {
+
     body{
-        font-size: 30px;
+    font-size: 1.8vw;
+}
+    .card-text {
+        font-size: 1.3vw;
     }
-    
+    .nav-link{
+        font-size: 1.3vw;
+    }
+
     .navbar-brand{
-        font-size: 1.4em;
-        font-weight: bold;
+        font-size: 1.8vw;
+
         font-family: Arial, Helvetica, sans-serif;
     }
 
     .nav-item{
         padding: 10px;
     }
-    #pos{
-    position: relative;
-    font-size: 1.1em;
-    bottom: 0px;
-
-}
 }
 
-@media (max-width: 991px){
-
- 
-
-    body{
-        font-size: 20px;
+@media (max-width: 576px) {
+    h4{
+        font-size: 4vw;
     }
-    
-    .navbar-brand{
-        font-size: 1.2em;
+    .card-text{
+        font-size: 3vw;
     }
-    #pos{
-    position: relative;
-    font-size: 1.1em;
-    bottom: 0px;
 
 }
+
+@media (min-width: 691px) and (max-width: 728px){
+
 }
 
-.card{
-    float: left;
-}
-   
+
+
+
+
 
