--- a/templates/newsapp/Frontpage.html
+++ b/templates/newsapp/Frontpage.html
@@ -11,28 +11,44 @@
         <title>Get latest news from top sources</title>
     </head>
     <body>
-        <nav class = "navbar  navbar-dark bg-dark navbar-expand-sm">
+        <nav class = "navbar  navbar-dark bg-dark navbar-expand-md">
             <div class = "container-fluid">
                 <div class = "navbar-brand">
-                    <a href = "{% url 'send_news' %}" >News Aggregator</a>
+                    <a  href = "{% url 'send_news' %}"  >News Aggregator</a>
                 </div>
+                <form style="width: 50%;" class="form-group form-group-lg d-none d-sm-block d-md-none" method="GET" action="{% url 'search' %}">
+                 <div class="input-group" >
+                      <input class = "form-control mt-2"  value="{{ request.GET.q }}" name = "q" placeholder="Search...">
+                      <span class="input-group-append">
+                           <button class = "btn btn-primary btn-sm mt-2" style="width:max-content;border-radius: 0;" type="submit"><i class = "fa fa-search"></i></button>
+                      </span>
+                 </div>
+                </form>
                 <button type = "button" class = "navbar-toggler" data-toggle = "collapse" data-target = "#collapsable" aria-expanded = "false">
                     <span class = "navbar-toggler-icon"></span>
                 </button>
+
                 <div class = "collapse navbar-collapse" id = "collapsable">
                 {% block nav %}
-                    <ul class = "nav navbar-nav ml-auto">
-                        {% block India%}<li class = "nav-item text-center active"><a href = "{% url 'send_news' %}" class = "nav-link">India</a></li>{% endblock %}
-                        {% block sports %}<li class = "nav-item text-center"><a href = "{% url 'send_sports_news' %}" class = "nav-link">Sports</a></li>{% endblock %}
-                        {% block entertainment %}<li class = "nav-item text-center"><a href = "{% url 'send_entertainment_news' %}" class = "nav-link">Entertainment</a></li>{% endblock %}
-                        {% block politics %}<li class = "nav-item text-center"><a href = "{% url 'send_politics_news' %}" class = "nav-link">Politics</a></li>{% endblock %}
 
-                        <form  class="form d-none d-sm-block" method="GET" action="{% url 'search' %}">
-                            <input class = "form-control-sm" value="{{ request.GET.q }}" name = "q" placeholder="Search..." style="margin-top: 25px;">
-                            <button class = "btn btn-primary btn-sm" type="submit"><i class = "fa fa-search"></i></button>
-                        </form>
+                    <ul class = "nav navbar-nav ml-auto">
+                        {% block India%}<li class = " nav-item text-center active " ><a   href = "{% url 'send_news' %}" class = "nav-link">India</a></li>{% endblock %}
+                        {% block sports %}<li class = " nav-item text-center " ><a  href = "{% url 'send_sports_news' %}" class = "nav-link">Sports</a></li>{% endblock %}
+                        {% block entertainment %}<li class = " nav-item text-center " ><a  href = "{% url 'send_entertainment_news' %}" class = "nav-link">Entertainment</a></li>{% endblock %}
+                        {% block politics %}<li class = "  nav-item text-center mr-1" ><a   href = "{% url 'send_politics_news' %}" class = "nav-link">Politics</a></li>{% endblock %}
+
+
+
 
                     </ul>
+                    <form  class="form-group form-group-sm d-none d-md-block" method="GET" action="{% url 'search' %}">
+                         <div class="input-group" >
+                            <input class = "form-control-sm mt-2 col-md-8"  value="{{ request.GET.q }}" name = "q" placeholder="Search...">
+                            <span class="input-group-append">
+                                <button class = "btn btn-primary btn-sm mt-2" style="width:max-content;border-radius: 0;" type="submit"><i class = "fa fa-search"></i></button>
+                            </span>
+                        </div>
+                    </form>
                 {% endblock %}
                 </div>
             </div>
@@ -95,10 +111,10 @@
             <div class = "card-img-top" style="display:inline-block;">
                 <img src="{{ object.img }}" class = "img-fluid w-100" alt="">
                 {{ value|linebreaks }}
-                <h4>{{ object.title }}</h4>
+                <h4 >{{ object.title }}</h4>
             </div>
 
-                <p class = "card-text" style="display:inline-block;font-size: large;">{{ object.desc }}</p>
+                <p class = "card-text col-md-12" style="display:inline-block;">{{ object.desc }}</p>
                 {{ value|linebreaks }}
             </div>
 
@@ -106,6 +122,7 @@
         </div>
 
         {% endblock%}
+        {% block paginate %}
         <footer>
         <nav aria-label = "Page Navigation">
             <ul class = "pagination pagination-lg col justify-content-center" style="border-radius: 0">
@@ -118,6 +135,7 @@
             </ul>
         </nav>
         </footer>
+        {% endblock %}
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
