--- a/templates/newsapp/Politics.html
+++ b/templates/newsapp/Politics.html
@@ -1,6 +1,6 @@
 {% extends "newsapp/Frontpage.html" %}
 
-{% block India %}<li class = "nav-item text-center"><a href = "{% url 'send_news' %}" class = "nav-link">India</a></li>{% endblock %}
-{% block politics %}<li class = "nav-item text-center active"><a href = "{% url 'send_politics_news' %}" class = "nav-link">Politics</a></li>{% endblock %}
-{% block carousel %}<div></div>{% endblock %}
+{% block India %}<li class = "nav-item text-center" style="font-size: 2vw;"><a href = "{% url 'send_news' %}" class = "nav-link">India</a></li>{% endblock %}
+{% block politics %}<li class = "nav-item text-center active" style="font-size: 2vw;"><a href = "{% url 'send_politics_news' %}" class = "nav-link">Politics</a></li>{% endblock %}
+{% block carousel %}<div class="mt-4"></div>{% endblock %}
 
